# OpenWeatherMap

./: CMakeLists.txt  city_list.cpp  city_list.hpp  config.cpp  config.hpp  daneel.conf  main.cpp  request_handler.cpp  request_handler.hpp  utils.cpp  utils.hpp  weather_result.cpp  weather_result.hpp
